code/web/app/webroot/css/default.css
* {
	margin:0;
	padding:0;
}

#map {
	width:480px;
	height:500px;
	margin:5px;
}

#map div {
	padding:0;
	margin-bottom:0;
}

.clear {
	clear:both;
}

ul {
    list-style: none;
}

body {
	background:#f9fafc;
	font-family:'lucida grande',verdana,helvetica,arial,sans-serif;
	font-size:12px;
	margin: 0;
	padding:0;
	text-align: center;
}

a {
	color: #003d4c;
	text-decoration: underline;
	font-weight: bold;
}

a:hover {
	color: #367889;
	text-decoration:none;
}

a img {
	border:none;
}

h1, h2, h3, h4 {
	font-weight: normal;
	margin-bottom:0.5em;
}

h1 {
	background:#fff;
	color: #003d4c;
	font-size: 100%;
}

h2 {
	background:#fff;
	color: #e32;
	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
	font-size: 190%;
}

h3 {
	color: #993;
	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
	font-size: 165%;
}

h4 {
	color: #993;
	font-weight: normal;
}

.body {
	border-style:solid;
	border-width:0px 1px 0px 1px;
	border-color:#222;
	width:790px;
	margin:0;
	padding:10px;
}

.sub-title {
	color:#39d1ff;
}

.title {
	color:#3e3e3c;
}

p {
	color:#8a8a8a;
}

.button {
	background:#3ed2f2;
	color:#ffffff;
}

.br {
	clear:both;
}

.footer {
	padding: 0 20px;
	margin: 0;
	float: left;
	width: 772px;
	height:20px;
	background: #222;
	-moz-border-radius: 0px 0px 15px 15px;
	border-radius: 0px 0px 15px 15px;
    color: white;
    text-align:center;
}

.footer a {
    color:white;
}

/* Index page */
.left-menu {
	width:288px;
	float:left;
	padding:0px 0px 10px 0px;
}

.content {
	float:right;
}

#content {
	width:780px;
	margin:0 auto;
	text-align:left;
}

.top-menu {
	width: 772px;
	background: #222000;
	-moz-border-radius: 15px 15px 0px 0px;
	border-top-right-radius: 15px;
	border-top-left-radius: 15px;
}

/* Cake SQL LOG styles */
.cake-sql-log {
	/*display:none;*/
}

.cake-sql-log table {
	background: #f4f4f4;
}
.cake-sql-log td {
	padding: 4px 8px;
	text-align: left;
	font-family: Monaco, Consolas, "Courier New", monospaced;
}
.cake-sql-log caption {
	color:#fff;
}

/** Forms **/
form {
	clear: both;
	margin-right: 20px;
	padding: 0;
	width: 95%;
}
fieldset {
	border: 1px solid #ccc;
	margin-top: 1em;
	padding: 16px 20px;
}
fieldset legend {
	background:#fff;
	color: #e32;
	font-size: 160%;
	font-weight: bold;
}
fieldset fieldset {
	margin-top: 0px;
	margin-bottom: 20px;
	padding: 16px 10px;
}
fieldset fieldset legend {
	font-size: 120%;
	font-weight: normal;
}
fieldset fieldset div {
	clear: left;
	margin: 0 20px;
}
form div {
	clear: both;
	margin-bottom: 1em;
	padding: .5em;
	vertical-align: text-top;
}
form .input {
	color: #444;
}
form .required {
	font-weight: bold;
}
form .required label:after {
	color: #e32;
	content: '*';
	display:inline;
}
form div.submit {
	border: 0;
	clear: both;
	margin-top: 10px;
}
label {
	display: block;
	font-size: 110%;
	margin-bottom:3px;
}
input, textarea {
	clear: both;
	font-size: 140%;
	font-family: "frutiger linotype", "lucida grande", "verdana", sans-serif;
	padding: 1%;
	width:98%;
}
select {
	clear: both;
	font-size: 120%;
	vertical-align: text-bottom;
}
select[multiple=multiple] {
	width: 100%;
}
option {
	font-size: 120%;
	padding: 0 3px;
}
input[type=checkbox] {
	clear: left;
	float: left;
	margin: 0px 6px 7px 2px;
	width: auto;
}
div.checkbox label {
	display: inline;
}
input[type=radio] {
	float:left;
	width:auto;
	margin: 0 3px 7px 0;
}
div.radio label {
	margin: 0 0 6px 20px;
}
input[type=submit] {
	display: inline;
	font-size: 110%;
	width: auto;
}
form .submit input[type=submit] {
	background:#62af56;
	background: -webkit-gradient(linear, left top, left bottom, from(#a8ea9c), to(#62af56));
	background-image: -moz-linear-gradient(top, #a8ea9c, #62af56);
	border-color: #2d6324;
	color: #000;
	text-shadow: #8cee7c 0px 1px 0px;
}
form .submit input[type=submit]:hover {
	background:#4ca83d;
	background: -webkit-gradient(linear, left top, left bottom, from(#85e573), to(#4ca83d));
	background-image: -moz-linear-gradient(top, #85e573, #4ca83d);
}

/** Notices and Errors **/
div.message {
	clear: both;
	color: #fff;
	font-size: 140%;
	font-weight: bold;
	margin: 0 0 1em 0;
	background: #c73e14;
	padding: 5px;
}
div.error-message {
	clear: both;
	color: #fff;
	font-weight: bold;
	background: #c73e14;
}
p.error {
	background-color: #e32;
	color: #fff;
	font-family: Courier, monospace;
	font-size: 120%;
	line-height: 140%;
	padding: 0.8em;
	margin: 1em 0;
}
p.error em {
	color: #000;
	font-weight: normal;
	line-height: 140%;
}
.notice {
	background: #ffcc00;
	color: #000;
	display: block;
	font-family: Courier, monospace;
	font-size: 120%;
	line-height: 140%;
	padding: 0.8em;
	margin: 1em 0;
}
.success {
	background: green;
	color: #fff;
}

/** Debugging **/
pre {
	color: #000;
	background: #f0f0f0;
	padding: 1em;
}
pre.cake-debug {
	background: #ffcc00;
	font-size: 120%;
	line-height: 140%;
	margin-top: 1em;
	overflow: auto;
	position: relative;
}
div.cake-stack-trace {
	background: #fff;
	color: #333;
	margin: 0px;
	padding: 6px;
	font-size: 120%;
	line-height: 140%;
	overflow: auto;
	position: relative;
}
div.cake-code-dump pre {
	position: relative;
	overflow: auto;
}
div.cake-stack-trace pre, div.cake-code-dump pre {
	color: #000;
	background-color: #F0F0F0;
	margin: 0px;
	padding: 1em;
	overflow: auto;
}
div.cake-code-dump pre, div.cake-code-dump pre code {
	clear: both;
	font-size: 12px;
	line-height: 15px;
	margin: 4px 2px;
	padding: 4px;
	overflow: auto;
}
div.cake-code-dump span.code-highlight {
	background-color: #ff0;
	padding: 4px;
}
div.code-coverage-results div.code-line {
	padding-left:5px;
	display:block;
	margin-left:10px;
}
div.code-coverage-results div.uncovered span.content {
	background:#ecc;
}
div.code-coverage-results div.covered span.content {
	background:#cec;
}
div.code-coverage-results div.ignored span.content {
	color:#aaa;
}
div.code-coverage-results span.line-num {
	color:#666;
	display:block;
	float:left;
	width:20px;
	text-align:right;
	margin-right:5px;
}
div.code-coverage-results span.line-num strong {
	color:#666;
}
div.code-coverage-results div.start {
	border:1px solid #aaa;
	border-width:1px 1px 0px 1px;
	margin-top:30px;
	padding-top:5px;
}
div.code-coverage-results div.end {
	border:1px solid #aaa;
	border-width:0px 1px 1px 1px;
	margin-bottom:30px;
	padding-bottom:5px;
}
div.code-coverage-results div.realstart {
	margin-top:0px;
}
div.code-coverage-results p.note {
	color:#bbb;
	padding:5px;
	margin:5px 0 10px;
	font-size:10px;
}
div.code-coverage-results span.result-bad {
	color: #a00;
}
div.code-coverage-results span.result-ok {
	color: #fa0;
}
div.code-coverage-results span.result-good {
	color: #0a0;
}

/* Conversations controller */
.conversations {
	list-style: none;
	padding:2px 0px 2px 0px;
}

.conversations li {
	border-bottom:1px solid #c5c5c5;
}

/* Exchanges */
ul.exchanges {
	list-style: none;
	padding:2px 0px 2px 0px;
}

ul.exchanges li {
	border-bottom:1px solid #c5c5c5;
}

.exchange-comment-list {
	list-style: none;
}

.exchange-comment-list li {	
	padding:2px 0px 2px 0px;
	border-top:1px solid #c5c5c5;
}

.exchange_comment_user_info {
	float:right;
}

p.exchange-location {
    text-weight:700;
    
}

.exchange-description {
	margin-bottom:5px;
}

.exchange-photo-list {
	list-style-type: none;
}

table.users {
    width:740px;    
}

table.exchanges {
    width:740px;    
}

div.exchange-type {
    width:100%;
    color:white;
}

div.event {
    color:gray;
    background:#FFFFFF;
}

div.offer {
    background:#FF9305;
}

div.request {
    background:#CD05FF;
}

div.service {
    background:#5658F5;
}

/*carousel*/
.exchange-photos{ float:left;margin:10px; }
.carousel_view{float: left;border: 1px solid black;}
.carousel_slider{float: left;text-align: center;height: 332px;overflow: hidden;border: 1px solid black;}


.link-button{vertical-align: super;float: left;margin:3px; padding: 5px 10px;border-radius: 7px 7px 7px 8px;border-color: #CCCCCC #C6C6C6 #AAAAAA; border-style: solid;border-width: 1px;text-decoration: none;background-color: #FCFCFC}

a.exchange-view-link{color: #993;font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;font-size: 140%;}


.notification-counter{padding: 2px 5px; float: right; margin-top: 3px; border-radius: 5px 5px 5px 5px; background-color: #F22222; border: 2px solid rgb(136, 85, 85);}
.notification-counter-zero{padding: 2px 5px;float: right;background-color: #FFFFFF; margin-top: 3px;border-radius: 5px 5px 5px 5px;border: 2px solid #777777;}

.notification-counter a{  color: #FFFFFF !important;}
.notification-counter a:hover{ background-color: #F22222 !important;}
.notification-counter-zero a{ color: #000000 !important; }
.notification-counter-zero a:hover{ background-color: #FFFFFF !important;}
.notification-item{background-color:#DCDCDC;height: 25px; margin-bottom: 2px;padding-left: 31px;padding-top: 5px;}
.notification-item-unread{background-color:#B0E0E6;height: 30px; margin-bottom: 2px;}

.my-profile{padding-top: 7px;}

/** admin user view **/
dl {
	
}
dl .altrow {
	background: #f4f4f4;
}
dt {
	font-weight: bold;
}
dd {
	
}

ul#exchanges {
    
}

ul#exchanges li {
    width: 372px;
    height: 150px;
    border: 1px solid gray;
    margin: 5px;
    padding: 5px;
    float:left;
    border-radius: 5px; 
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background: white;
    position: relative;
}

ul#exchanges li img {
    float:right;
    position:relative;    
}

ul#exchanges h3 a {
    color:inherit;
    font-weight: inherit;
    font-size: inherit;
}

ul#exchanges a {
    text-decoration: none;
}

ul#exchanges div.links {
    position:absolute;
    left: 5px;
    bottom: 5px;
}

ul#exchanges div.links a {
    margin: 0 10px 0 0;
}

ul#exchanges li p.datos-adicionales {
    margin: 0 0 10px 0;
    padding: 0;
    color: #8A8A8A;
}

ul#exchanges li p {
    color: black;
}

div#exchanges-list-page {

}

div#filters {
    background: gray;
    padding:5px 5px 5px 5px;
    margin: 5px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    color: #fff;
}

form#filters_form {
    display:none;
}


div#filters .input {
    color:#fff;
}

div#filters p {
    color: #fff;
    padding:0 0 10px 0;
}

div#filters a#toggle_filtros {
    float:right;
}

div#filters a {
    color: #fff;
}

div.paginator {
    text-align:center;
}

div.paginator span:first-child {
    margin: 0 10px 0 0;
}

div.paginator span:last-child {
    margin: 0 0 0 10px;
}

